--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>About me</h2>
             <div class="row">
               <div class="col-md-4">
-                <p><img src="./assets/images/Image.jpeg" class="img-responsive" alt=""></p>
+                <p><img src="Image.jpeg" class="img-responsive" alt=""></p>
               </div>
               <div class="col-md-8">
 
@@ -109,7 +109,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
+        <p><img src="mashup-icon.svg" alt=""></p>
         
         <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
         <p>
