--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <title>My Portofolio | Addini</title>
   </head>
-  <body id="Home">
+  <script src="https://unpkg.com/vue@3"></script>
+   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #302e2e">
       <div class="container">
@@ -42,14 +43,13 @@
     <!-- Akhir Navbar -->
 
     <!-- Jumbotron -->
-
-    <div class="row text-center mb-4"></div>
-    <section class="jumbotron text-center" style="background-color: #857777">
-      <img src="img/Ft acu.jpg" alt="Addini Nurul Aisyah" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Addini Nurul Aisyah</h1>
-      <p class="lead">Student majoring in Information Systems at Ahmad Dahlan University</p>
-    </section>
-    </div>
+    <div class="row text-center pt-5">
+      <section class="jumbotron text-center pt-5" style="background-color: #857777">
+        <img src="img/Ft acu.jpg" alt="Addini Nurul Aisyah" width="200" class="rounded-circle img-thumbnail" />
+        <h1 class="display-4">Addini Nurul Aisyah</h1>
+        <p class="lead">Student majoring in Information Systems at Ahmad Dahlan University</p>
+      </section>
+     </div>
     <!-- Akhir jumbotron -->
 
     <!-- about -->
