--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+bb
     <title>My Portofolio | Addini</title>
   </head>
   <script src="https://unpkg.com/vue@3"></script>
@@ -116,7 +116,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <div class="card">
+            <div class="card" v-for="data in article">
               <img src="img/vagabond.jpg" class="card-img-top" alt="SD" />
               <div class="card-body">
                 <p class="card-text text-center">Drama Vagabond merupakan drama Korea bergenre spionase, yang menceritakan tentang seorang pemain pengganti yang harus terlibat dengan konflik tingkat tinggi di negaranya saat berupaya mengungkap misteri kecelakaan pesawat yang ditumpangi keponakannya.</p>
@@ -135,7 +135,7 @@
             <div class="card">
               <img src="img/Sebelah gudang.jpg" class="card-img-top" alt="SMA" />
               <div class="card-body">
-                <p class="card-text text-center">\</p>
+                <p class="card-text text-center">Sepetak tempat yang dapat mengurangi rasa penat</p>
               </div>
             </div>
           </div>
