--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ bb
             "https://raw.githubusercontent.com/addinii/tekweb2022/main/assests/article.json"
           )
           .then((res) => {
-            // console.log(res.data);
+            console.log(res.data);
             this.article = res.data;
           })
           .catch((error) => {
