--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             <div class="card">
               <img :src="data.Thumbnail" class="card-img-top" alt="SD" />
               <div class="card-body">
+                <h5 class="card-title">{{ data.Title }}</h5>
+                 <h7 class="card-text">by : {{ data.Author }}</h6>
                 <p class="card-text text-center">{{ data.Content }}</p>
               </div>
             </div>
