--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>My Portofolio | Addini</title>
   </head>
-   <body id="Home" "About" "Portofolio" "Article">
+   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #302e2e">
       <div class="container">
