--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
     <!-- Akhir Portofolio -->
 
-    <!-- ArticLE -->
+    <!-- Article -->
     <section id="" style="background-color: #ebe5e9">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row text-center mb-4">
           <div class="col">
-            <h2>ARTICAL</h2>
+            <h2>ARTICLE</h2>
           </div>
         </div>
         <div class="row">
