--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#Portofolio">PORTOFOLIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Artical">ARTICAL</a>
+              <a class="nav-link" href="#Article">ARTICLE</a>
             </li>
           </ul>
         </div>
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row text-center mb-4">
           <div class="col">
-            <h2>ARTICAL</h2>
+            <h2>ARTICLE</h2>
           </div>
         </div>
         <div class="row">
