--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <a class="nav-link active" aria-current="page" href="#Home">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#About">ABOUT</a>
+              <a class="nav-link" href="#about">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Portofolio">PORTOFOLIO</a>
+              <a class="nav-link" href="#Potofolio">PORTOFOLIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Article">ARTICLE</a>
@@ -99,7 +99,7 @@
     <!-- Akhir Portofolio -->
 
     <!-- Article -->
-    <section id="" style="background-color: #ebe5e9">
+    <section id="Article" style="background-color: #ebe5e9">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#857777"
