--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <h5 class="card-title">{{ data.Title }}</h5>
                  <h7 class="card-text">by : {{ data.Author }}</h6>
                 <p class="card-text text-center">{{ data.Content }}</p>
+                <a :href="'./Markdown.html?markdown='+data.Markdown" class="btn btn-primary">See More</a>
               </div>
             </div>
           </div>
@@ -168,6 +169,38 @@
 
   </script>
   <!-- Akhir Vue App -->
+
+  <script type="module">
+
+  let app = Vue.createApp({
+    data() {
+      return {
+        markdown: null
+      }
+    },
+    methods: {
+      getMarkdownFile(){
+          const queryString = window.location.search;
+          const urlParams = new URLSearchParams(queryString);
+          const fileName = urlParams.get('markdown');
+          var converter = new showdown.Converter();
+          axios
+                .get(
+                  'https://raw.githubusercontent.com/addinii/tekweb2022/main/assests/Markdown/' + filename
+                )
+                .then((res) => {
+                    var html = converter.makeHtml(res.data);           
+                    this.markdown = html;
+                })
+        }
+    },
+    beforeMount() {
+      this.getMarkdownFile()
+    }
+  })
+  app.mount('#app');
+</script>
+
     <!-- Akhir Article -->
 
     <!-- Vue js -->
